# sql-benchmark

./: .gitignore  README.md  plot-memory.gpi  plot-mysql.gpi  plot-postgresql.gpi  plot-sqlite.gpi  plot-user-time.gpi  run-all.sh  sql-benchmark-results.xls
ado/: Makefile.in  README.md  configure  configure.ac  sqlbench.gpr.in  sqlbench.properties
ado/config/: mysql-create-table.sql  postgresql-create-table.sql  sqlite-create-table.sql
ado/src/: sqlbench-main.adb  sqlbench-simple.adb  sqlbench-simple.ads  sqlbench.adb  sqlbench.ads
java/: README.md  pom.xml  sqlbench.properties
java/src/main/java/org/ciceron/sqlbenchmark/: Benchmark.java  Main.java  Simple.java
java/src/test/java/org/ciceron/sqlbenchmark/: AppTest.java
python/: README.md  config  sqlbench.properties
python/src/: __main__.py  benchmark.py  mysql_benchmark.py  mysql_simple.py  postgresql_benchmark.py  postgresql_simple.py  sqlite_benchmark.py  sqlite_simple.py
tools/: Makefile.in  configure  configure.ac  tool.gpr.in  tool.properties
tools/src/: tool-data.adb  tool-data.ads  tool-main.adb  tool.ads
tools/src/excel_writer/: excel_out.adb  excel_out.ads  ieee_754-generic_double_precision.adb  ieee_754-generic_double_precision.ads  ieee_754.ads
